@@ -1,6 +1,7 @@
 20 March 2007
 
-* Try to get user/pass from .netrc if asked with "user from-netrc".
+* If user/pass is not specified on IMAP or POP3 accounts, attempt to read it
+  from the ~/.netrc file.
 * Redo child fetch stuff so that exec/pipe matches actually works
 * Stop exec/pipe matches early if only checking for regexp and it is found.
 * Sprinkle a few fsyncs, and block SIGTERM while writing to mboxes.
@@ -157,4 +158,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.44 2007-03-20 18:17:46 nicm Exp $
+$Id: CHANGES,v 1.45 2007-03-20 19:00:49 nicm Exp $
